<resources>
    <string name="app_name">DND Lion</string>
    <string name="schedule_dnd_mode">Schedule DND Mode</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="edit_sms_message">Edit SMS Message</string>
    <string name="repeat">Repeat</string>
    <string name="stop_dnd_mode">Stop DND Mode</string>
    <string name="default_sms_message">User is in DND mode.</string>
    <string name="repeat_days">Repeat Days</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="sms_message">SMS Message</string>
    <string name="schedule_dnd">Schedule DND</string>
    <string name="stop_dnd">Stop DND</string>
    <string name="settings">Settings</string>
    <string name="update_schedule">Update Schedule</string>
</resources>
